--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,8 +42,31 @@ rclcpp_components_register_node(hz_checker
   EXECUTABLE hz_checker_node
 )
 
+
+add_library(node_list_component SHARED src/node_list.cpp)
+target_compile_definitions(node_list_component
+  PRIVATE "TOPIC_TOOLS_BUILDING_DLL")
+
+ament_target_dependencies(node_list_component rclcpp_generic rclcpp rclcpp_components)
+rclcpp_components_register_node(node_list_component
+  PLUGIN "topic_tools::NodeList"
+  EXECUTABLE node_list
+)
+
+
+add_library(topic_list_component SHARED src/topic_list.cpp)
+target_compile_definitions(topic_list_component
+  PRIVATE "TOPIC_TOOLS_BUILDING_DLL")
+
+ament_target_dependencies(topic_list_component rclcpp_generic rclcpp rclcpp_components)
+rclcpp_components_register_node(topic_list_component
+  PLUGIN "topic_tools::TopicList"
+  EXECUTABLE topic_list
+)
+
+
 install(
-  TARGETS topic_tools_node hz_checker
+  TARGETS topic_tools_node hz_checker node_list_component topic_list_component
   ARCHIVE DESTINATION lib
   LIBRARY DESTINATION lib
   RUNTIME DESTINATION bin
