--- a/package.xml
+++ b/package.xml
@@ -7,7 +7,7 @@
   <maintainer email="nikolai.morin@apex.ai">nikolai.morin</maintainer>
   <license>TODO: License declaration</license>
 
-  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>ament_cmake_auto</buildtool_depend>
 
   <depend>rclcpp_generic</depend>
   <depend>rclcpp</depend>
